gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23216.d
version https://git-lfs.github.com/spec/v1
oid sha256:0eda88726f95c9979e0236a8ae268429390c5a1dc247726d607ab9b6dcbc6a1b
size 730
